@@ -519,6 +519,43 @@ my_page.body.append(('paragraph', RichText("<p>And they all lived happily ever a
 my_page.save()
 ```
 
+(streamfield_retrieving_blocks_by_name)=
+
+## Retrieving blocks by name
+
+```{versionadded} 4.0
+The `blocks_by_name` and `first_block_by_name` methods were added.
+```
+
+StreamField values provide a `blocks_by_name` method for retrieving all blocks of a given name:
+
+```python
+my_page.body.blocks_by_name('heading')  # returns a list of 'heading' blocks
+```
+
+Calling `blocks_by_name` with no arguments returns a `dict`-like object, mapping block names to the list of blocks of that name. This is particularly useful in template code, where passing arguments isn't possible:
+
+```html+django
+<h2>Table of contents</h2>
+<ol>
+    {% for heading_block in page.body.blocks_by_name.heading %}
+        <li>{{ heading_block.value }}</li>
+    {% endfor %}
+</ol>
+```
+
+The `first_block_by_name` method returns the first block of the given name in the stream, or `None` if no matching block is found:
+
+```
+hero_image = my_page.body.first_block_by_name('image')
+```
+
+`first_block_by_name` can also be called without arguments to return a `dict`-like mapping:
+
+```html+django
+<div class="hero-image">{{ page.body.first_block_by_name.image }}</div>
+```
+
 (streamfield_migrating_richtext)=
 
 ## Migrating RichTextFields to StreamField
